--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -261,6 +261,9 @@ keyring==19.2.0
 # homeassistant.scripts.keyring
 keyrings.alt==3.1.1
 
+# homeassistant.components.konnected
+konnected==0.1.5
+
 # homeassistant.components.dyson
 libpurecool==0.5.0
 
