--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -264,6 +264,9 @@ keyring==20.0.0
 # homeassistant.scripts.keyring
 keyrings.alt==3.4.0
 
+# homeassistant.components.konnected
+konnected==0.1.5
+
 # homeassistant.components.dyson
 libpurecool==0.6.0
 
